@@ -1,0 +1,13 @@
+package client.rapid.module.modules.movement.jesus;
+
+import client.rapid.event.events.Event;
+import net.minecraft.client.Minecraft;
+
+public class JesusBase {
+    protected Minecraft mc = Minecraft.getMinecraft();
+
+    public void onEnable() {}
+    public void onDisable() {}
+    public void onEvent(Event e) {}
+    public void updateValues() {}
+}
